# TodosAppCpp

./: CMakeLists.txt  README.md  Todos.txt  build.bat
.github/workflows/: cmake-single-platform.yml
src/: Todo.cpp  Todo.hpp  TodoFile.cpp  TodoFile.hpp  main.cpp
